--- a/templates/index.html
+++ b/templates/index.html
@@ -428,7 +428,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="125" height="125"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon1new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Realtime Multiplayer</h4>
                   <p>Our platform is equpied with a spacial sound system to allow live, real voice communication and interaction with other players.</p>
@@ -438,7 +438,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_mobile--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="125" height="125"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon3 new copy.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Customizable Avatars</h4>
                   <p>Nexus provides customizable avatars with a large selection of items to choose froms.</p>
@@ -448,7 +448,7 @@
             <!-- Start Single Service -->
             <div class="col-lg-4 col-md-4 col-sm-6 col-12 wow move-up mt_sm--40">
               <div class="service service--2">
-                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="125" height="125"> </center> </div>
+                <div class="thumb"> <center> <img src="{{url_for('static',filename='img/service/icon2new.png')}}" alt="images" width="115" height="115"> </center> </div>
                 <div class="content" style="text-align: center">
                   <h4>Google Maps Integration</h4>
                   <p>Nexus uses 3D Terrain Models imported from Google Maps.</p>
@@ -571,21 +571,21 @@
               <div class="speakers-number-wrap counter-grid">
                 <!-- Start Single Count -->
                 <div class="counter-style--2 wow move-up">
-                  <div class="icon"> <i class="ion-ios-eye-outline"></i> </div> <span class="count">2034</span>
+                  <div class="icon"> <i class="ion-ios-eye-outline"></i> </div> <span class="count">1</span>
                   <div class="content">
                     <h6>Unique designs</h6>
                   </div>
                 </div> <!-- End Single Count -->
                 <!-- Start Single Count -->
                 <div class="counter-style--2 wow move-up">
-                  <div class="icon"> <i class="ion-ios-filing-outline"></i> </div> <span class="count">1234</span>
+                  <div class="icon"> <i class="ion-ios-filing-outline"></i> </div> <span class="count">1</span>
                   <div class="content">
                     <h6>Completed projects</h6>
                   </div>
                 </div> <!-- End Single Count -->
                 <!-- Start Single Count -->
                 <div class="counter-style--2 wow move-up">
-                  <div class="icon"> <i class="ion-ios-home-outline"></i> </div> <span class="count">4585</span>
+                  <div class="icon"> <i class="ion-ios-home-outline"></i> </div> <span class="count">1</span>
                   <div class="content">
                     <h6>Global partners</h6>
                   </div>
@@ -619,7 +619,7 @@
                       <!-- Start Single COntent -->
                       <div class="testimonial-nav">
                         <div class="content">
-                          <p>You can’t succeed if you just do what others do and follow the well-worn path. You need to create a new and original path for yourself.</p>
+                          <p>Design is intelligence made visible.</p>
                           <ul class="rating d-flex justify-content-center">
                             <li><i class="fa fa-star"></i></li>
                             <li><i class="fa fa-star"></i></li>
@@ -629,7 +629,7 @@
                           </ul>
                           <div class="testimonial-info">
                             <div class="clint-info">
-                              <h6>Harley Mills</h6> <span>- MMs Agency</span>
+                              <h6>Alina Wheeler</h6> <span>- writer</span>
                             </div>
                           </div>
                         </div>
@@ -710,7 +710,6 @@
             </div>
           </div>
           <div class="row mt--40">
-            <!-- Start Single Portfolio -->
             <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
               <div class="blog blog-style--2 creative--blog">
                 <!-- Swip Slide -->
@@ -719,7 +718,7 @@
                       src="{{url_for('static',filename='img/blog/blog-2/blog-4.jpg')}}" alt="Blog Images"></a> </div>
                 <div class="blog-content">
                   <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">Career Tips For Emerging Photographers</a></h3>
+                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">The social impact of coronavirus</a></h3>
                     <ul class="meta">
                       <li>January 7, 2018</li>
                       <li><a href="#">Photography</a></li>
@@ -728,56 +727,13 @@
                 </div>
               </div>
             </div> <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <div class="thumb"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-2.jpg')}}" alt="Blog Images"></a>
-                  <div class="video-btn"> <a class="video-icon play__btn" href="https://www.youtube.com/watch?v=9No-FiEInLA"></a> </div>
-                </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">Niche Blogs for Rising Metal Bands</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Life Style</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <div class="thumb"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-3.jpg')}}" alt="Blog Images"></a> </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">1950s up to now Pop Music Defined</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Photography</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
-            <!-- Start Single Portfolio -->
-            <div class="col-lg-6 col-xl-3 col-md-6 col-sm-6 col-12 wow move-up mt--30">
-              <div class="blog blog-style--2 creative--blog">
-                <div class="thumb"> <a href="{{url_for('static',filename='blog-details.html')}}"><img src="{{url_for('static',filename='img/blog/blog-2/blog-4.jpg')}}" alt="Blog Images"></a> </div>
-                <div class="blog-content">
-                  <div class="content">
-                    <h3 class="the-title"><a href="{{url_for('static',filename='blog-details.html')}}">The Most Underrated ’90s Bands</a></h3>
-                    <ul class="meta">
-                      <li>January 7, 2018</li>
-                      <li><a href="#">Web Design</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div> <!-- End Single Portfolio -->
+            <!-- COPY PASTE REST OF BLOG -->
+
+            -~>
           </div>
         </div>
       </div> <!-- End Blog Area -->
+
       <!-- Start Row Columns Area -->
       <div class="firefly brook-row-column-area clearfix">
         <div class="aaa creative-gradient--1 ptb--150">
