--- a/templates/connect.html
+++ b/templates/connect.html
@@ -15,7 +15,7 @@
 
                 <div class="col-xl-8 offset-xl-2 py-5">
 
-                    <h1>Reach out to <a href="http://the-nexus.herokuapp.com">Nexus</a></h1>
+                    <h1>Reach out to <span style="color:#FD3B82">Nexus</span></h1>
 
                     <p class="lead">Let us know if you have comments, requests and feedback or if you want to schedule an event with us</p>
 
@@ -29,14 +29,14 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="form_name">Firstname *</label>
+                    <label for="form_name">First Name *</label>
                     <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="form_lastname">Lastname *</label>
+                    <label for="form_lastname">Last Name *</label>
                     <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="col-md-12">
-                <input type="submit" class="btn btn-success btn-send" value="Send message">
+                <input type="submit" style="background-color:#FD3B82" class="btn btn-success btn-send" value="Send message">
             </div>
         </div>
         
