--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="{{url_for('static',filename='css/custom.css')}}">
 </head>
 
-<body class="template-font-3 template-color-2">
+<body class="template-font-3 template-color-2" style="background-color:black">
   <!--[if lte IE 9]> <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p> <![endif]-->
   <!-- Add your site or application content here -->
   <!-- Start PReloader -->
@@ -47,7 +47,7 @@
                     <ul class="mainmenu">
                       <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Blog</span></a> <!-- Start Mega Menu -->
                       </li>
-                      <li class="lavel-1 slide--megamenu"><a href="#"><span style="font-family: Roboto; font-weight: 200;">Connect</span></a> <!-- Start Mega Menu -->
+                      <li class="lavel-1 slide--megamenu"><a href="/connect"><span style="font-family: Roboto; font-weight: 200;">Connect</span></a> <!-- Start Mega Menu -->
                       </li>
                       <li class="lavel-1 slide--megamenu"><a href="/access"><span style="font-family: Roboto; font-weight: 200;">Portal</span></a> <!-- Start Mega Menu -->
                       </li>
