--- a/templates/connect.html
+++ b/templates/connect.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
         <link href='custom.css' rel='stylesheet' type='text/css'>
     </head>
-    <body>
+    <body style="background-color:black">
 
         <div class="container">
 
@@ -15,9 +15,9 @@
 
                 <div class="col-xl-8 offset-xl-2 py-5">
 
-                    <h1>Reach out to <span style="color:#FD3B82">Nexus</span></h1>
+                    <h1 style="color:white">Reach out to <span style="color:#E96E6E">Nexus</span></h1>
 
-                    <p class="lead">Let us know if you have comments, requests and feedback or if you want to schedule an event with us</p>
+                    <p class="lead" style="color:white">Let us know if you have comments, requests and feedback or if you want to schedule an event with us</p>
 
                     <!-- We're going to place the form here in the next step -->
                     <form id="contact-form" method="post" action="/receive_connect" role="form">
@@ -29,14 +29,14 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="form_name">First Name *</label>
+                    <label style="color:white" for="form_name">First Name *</label>
                     <input id="form_name" type="text" name="name" class="form-control" placeholder="Please enter your firstname *" required="required" data-error="Firstname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="form_lastname">Last Name *</label>
+                    <label style="color:white" for="form_lastname">Last Name *</label>
                     <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Please enter your lastname *" required="required" data-error="Lastname is required.">
                     <div class="help-block with-errors"></div>
                 </div>
@@ -45,14 +45,14 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="form_email">Email *</label>
+                    <label style="color:white" for="form_email">Email *</label>
                     <input id="form_email" type="email" name="email" class="form-control" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="form_need">Please specify your need *</label>
+                    <label style="color:white" for="form_need">Please specify your need *</label>
                     <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                         <option value=""></option>
                         <option value="Request quotation">Request event</option>
@@ -67,13 +67,13 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="form_message">Message *</label>
+                    <label style="color:white" for="form_message">Message *</label>
                     <textarea id="form_message" name="message" class="form-control" placeholder="Message for us *" rows="4" required="required" data-error="Please, leave us a message."></textarea>
                     <div class="help-block with-errors"></div>
                 </div>
             </div>
             <div class="col-md-12">
-                <input type="submit" style="background-color:#FD3B82" class="btn btn-success btn-send" value="Send message">
+                <input type="submit" style="background-color:#E96E6E;border:none;" class="btn btn-success btn-send" value="Send message">
             </div>
         </div>
         
