--- a/templates/connect.html
+++ b/templates/connect.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
         <link href='custom.css' rel='stylesheet' type='text/css'>
     </head>
-    <body style="background-color:black">
+    <body style="background-color:#413E4A">
 
         <div class="container">
 
