--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
 /**************************************************************
 
 	STYLESHEET INDEXING
-	|
+	|a
 	|
 	|___ Default Styles
 	|	|
@@ -998,13 +998,13 @@ Animation Css
   color: #AC61EE; }
 
 .secondary-font {
-  font-family: "Roboto", sans-serif; }
+  font-family: "Montserrat", sans-serif; }
 
 .primary-font {
-  font-family: "Roboto", sans-serif; }
+  font-family: "Poppins", sans-serif; }
 
 .heading-font {
-  font-family: "Roboto"; }
+  font-family: "louis_george_caferegular"; }
 
 .playfair-font {
   font-family: "Playfair Display", serif; }
@@ -13855,8 +13855,8 @@ Contagion Area
           font-size: 14px;
           line-height: 22px; } }
   .single-contagion:hover .contagion-image {
-    -webkit-animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
-    animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both; }
+    -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+    animation: heartbeat 1.5s ease-in-out infinite both; }
 
 .single-sympotom {
   display: -webkit-box;
@@ -13960,8 +13960,8 @@ Contagion Area
           font-size: 14px;
           line-height: 22px; } }
   .single-sympotom:hover .sympotom-thumb {
-    -webkit-animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
-    animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both; }
+    -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+    animation: heartbeat 1.5s ease-in-out infinite both; }
 
 .country-area {
   top: 0;
@@ -14083,8 +14083,8 @@ Contagion Area
         font-size: 18px;
         line-height: 22px; } }
   .single-prevination:hover .prevination-iamge {
-    -webkit-animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
-    animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both; }
+    -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+    animation: heartbeat 1.5s ease-in-out infinite both; }
 
 .single-hand-wash {
   text-align: center; }
@@ -14109,59 +14109,71 @@ Contagion Area
         font-size: 15px;
         line-height: 22px; } }
   .single-hand-wash:hover .hand-wash-image {
-    -webkit-animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
-    animation: shake-horizontal 0.9s cubic-bezier(0.455, 0.03, 0.515, 0.955) both; }
+    -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+    animation: heartbeat 1.5s ease-in-out infinite both; }
 
 /**
  * ----------------------------------------
- * animation shake-horizontal
+ * animation heartbeat
  * ----------------------------------------
  */
-@-webkit-keyframes shake-horizontal {
-  0%,
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); }
-  10%,
-  30%,
-  50%,
-  70% {
-    -webkit-transform: translateX(-10px);
-    transform: translateX(-10px); }
-  20%,
-  40%,
-  60% {
-    -webkit-transform: translateX(10px);
-    transform: translateX(10px); }
-  80% {
-    -webkit-transform: translateX(8px);
-    transform: translateX(8px); }
-  90% {
-    -webkit-transform: translateX(-8px);
-    transform: translateX(-8px); } }
+@-webkit-keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; } }
 
-@keyframes shake-horizontal {
-  0%,
-  100% {
-    -webkit-transform: translateX(0);
-    transform: translateX(0); }
-  10%,
-  30%,
-  50%,
-  70% {
-    -webkit-transform: translateX(-10px);
-    transform: translateX(-10px); }
-  20%,
-  40%,
-  60% {
-    -webkit-transform: translateX(10px);
-    transform: translateX(10px); }
-  80% {
-    -webkit-transform: translateX(8px);
-    transform: translateX(8px); }
-  90% {
-    -webkit-transform: translateX(-8px);
-    transform: translateX(-8px); } }
+@keyframes heartbeat {
+  from {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform-origin: center center;
+    transform-origin: center center;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  10% {
+    -webkit-transform: scale(0.91);
+    transform: scale(0.91);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  17% {
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; }
+  33% {
+    -webkit-transform: scale(0.87);
+    transform: scale(0.87);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in; }
+  45% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out; } }
 
 /* ----------------------
 Testimonial Area
@@ -17496,8 +17508,8 @@ Dividers Area
         animation-iteration-count: infinite; }
     .animated-dot.light-color .signal {
       background-color: #fff !important;
-      -webkit-animation: animationSignal cubic-bezier(0, 0.1, 0.1, 0.25) 2s;
-      animation: animationSignal cubic-bezier(0, 0.1, 0.1, 0.25) 2s;
+      -webkit-animation: animationSignalTwo cubic-bezier(0, 0.1, 0.1, 0.25) 2s;
+      animation: animationSignalTwo cubic-bezier(0, 0.1, 0.1, 0.25) 2s;
       -webkit-transform-origin: 50% 50%;
       -ms-transform-origin: 50% 50%;
       transform-origin: 50% 50%;
@@ -22927,7 +22939,7 @@ header.br_header.header-default.vertical-slide-portfolio {
     width: 100%;
     z-index: 9999; }
     .header-default.header-transparent.position-from--top {
-      padding-top: 12px; }
+      padding-top: 24px; }
       .header-default.header-transparent.position-from--top.headroom--not-top {
         padding-top: 0; }
   .header-default .header__wrapper {
@@ -22982,17 +22994,17 @@ header.br_header.header-default.vertical-slide-portfolio {
           -ms-flex-preferred-size: 50%;
           flex-basis: 50%; } }
       .header-default .header__wrapper .header-left .logo a img {
-        padding-top: 5px;
-        padding-bottom: 5px;
-        width: 340px;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        width: 170px;
         height: auto;
         max-width: 100%; }
         @media only screen and (min-width: 992px) and (max-width: 1199px) {
           .header-default .header__wrapper .header-left .logo a img {
-            width: 280px !important; } }
+            width: 140px !important; } }
         @media only screen and (max-width: 767px) {
           .header-default .header__wrapper .header-left .logo a img {
-            width: 220px !important; } }
+            width: 110px !important; } }
     .header-default .header__wrapper .header-flex-right {
       display: -webkit-box;
       display: -webkit-flex;
@@ -26300,6 +26312,8 @@ Prresentation Area
   line-height: 2;
   font-family: "louis_george_caferegular";
   color: #ffffff; }
+  .copyright .copyright-right p a {
+    color: #fff; }
 
 .copyright.text-var-2 .copyright-left ul.bk-copyright-menu li a {
   font-family: "Poppins", sans-serif;
