--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
             <div class="header__wrapper mr--0">
               <!-- Header Left -->
               <div class="header-left flex-20">
-                <div class="logo"> <a href="{{url_for('static',filename='index.html')}}"> <img src="{{url_for('static',filename='img/logo/nexuslogo.png')}}" alt="Brook Images"> </a> </div>
+                <div class="logo"> <a href="{{url_for('static',filename='index.html')}}"> <img src="{{url_for('static',filename='img/logo/nexuslogo_small.png')}}" alt="Brook Images"> </a> </div>
               </div> <!-- Mainmenu Wrap -->
               <div class="header-flex-right flex-80">
                 <div class="mainmenu-wrapper have-not-flex d-none d-lg-block">
