--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -5,14 +5,14 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>JustDo Admin</title> <!-- plugins:css -->
+  <title>Nexus // Access Portal</title> <!-- plugins:css -->
   <link rel="stylesheet" href="{{url_for('static',filename='vendors/ti-icons/css/themify-icons.css')}}">
   <link rel="stylesheet" href="{{url_for('static',filename='vendors/css/vendor.bundle.base.css')}}"> <!-- endinject -->
   <!-- Plugin css for this page -->
   <!-- End plugin css for this page -->
   <!-- inject:css -->
   <link rel="stylesheet" href="{{url_for('static',filename='css/vertical-layout-dark/style.css')}}"> <!-- endinject -->
-  <link rel="shortcut icon" href="{{url_for('static',filename='images/favicon.png')}}" />
+  <link rel="shortcut icon" href="{{url_for('static',filename='img/logo/nexus-icon.png')}}" />
 </head>
 
 <body>
@@ -20,8 +20,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"> <a class="navbar-brand brand-logo mr-5" href="{{url_for('static',filename='index.html')}}"><img
-            src="{{url_for('static',filename='images/logo-white.svg')}}" class="mr-2" alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="{{url_for('static',filename='index.html')}}"><img
-            src="{{url_for('static',filename='images/logo-mini.svg')}}" alt="logo" /></a> </div>
+            src="{{url_for('static',filename='img/logo/nexuslogo.png')}}" class="mr-2" alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="{{url_for('static',filename='index.html')}}"><img
+            src="{{url_for('static',filename='img/logo/nexus-icon.png)}}" alt="logo" /></a> </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end"> <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize"> <span class="ti-layout-grid2"></span> </button>
         <ul class="navbar-nav mr-lg-2">
           <li class="nav-item nav-search d-none d-lg-block">
@@ -1052,8 +1052,8 @@
         </div> <!-- content-wrapper ends -->
         <!-- partial:partials/_footer.html -->
         <footer class="footer">
-          <div class="d-sm-flex justify-content-center justify-content-sm-between"> <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2018 <a href="https://www.bootstrapdash.com/"
-                target="_blank">Bootstrapdash</a>. All rights reserved.</span> <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span> </div>
+          <div class="d-sm-flex justify-content-center justify-content-sm-between"> <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © 2020 <a href="https://www.thenexus.cloud/"
+                target="_blank">Nexus</a>. All rights reserved.</span> <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Hand-crafted & made with <i class="ti-heart text-danger ml-1"></i></span> </div>
         </footer> <!-- partial -->
       </div> <!-- main-panel ends -->
     </div> <!-- page-body-wrapper ends -->
