--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
               <div class="brand-logo">
-                <img src="{{url_for('static',filename='img/logo/nexus-gradients.png')}}" alt="logo">
+                <img src="{{url_for('static', filename='img/logo/nexus-gradient.png')}}" alt="logo">
               </div>
               <h4>New here?</h4>
               <h6 class="font-weight-light">You haven't set your password yet. Create one now</h6>
