--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -81,7 +81,7 @@
               </a>
             </div>
           </li>
-          <li class="nav-item nav-profile dropdown"> <a class="nav-link" href="#" data-toggle="dropdown" id="profileDropdown"> <img src="{{url_for('static',filename='images/faces/face28.jpg')}}" alt="profile" /> </a>
+          <li class="nav-item nav-profile dropdown"> <a class="nav-link" href="#" data-toggle="dropdown" id="profileDropdown"> </a>
             <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown"> <a class="dropdown-item"> <i class="ti-settings text-primary"></i> Settings </a> <a class="dropdown-item"> <i
                   class="ti-power-off text-primary"></i> Logout </a> </div>
           </li>
@@ -140,14 +140,14 @@
             </div>
             <ul class="chat-list">
               <li class="list active">
-                <div class="profile"><img src="{{url_for('static',filename='images/faces/face1.jpg')}}" alt="image"><span class="online"></span></div>
+                <div class="profile"><span class="online"></span></div>
                 <div class="info">
                   <p>Thomas Douglas</p>
                   <p>Available</p>
                 </div> <small class="text-muted my-auto">19 min</small>
               </li>
               <li class="list">
-                <div class="profile"><img src="{{url_for('static',filename='images/faces/face2.jpg')}}" alt="image"><span class="offline"></span></div>
+                <div class="profile"><span class="offline"></span></div>
                 <div class="info">
                   <div class="wrapper d-flex">
                     <p>Catherine</p>
@@ -157,28 +157,28 @@
                 <div class="badge badge-success badge-pill my-auto mx-2">4</div> <small class="text-muted my-auto">23 min</small>
               </li>
               <li class="list">
-                <div class="profile"><img src="{{url_for('static',filename='images/faces/face3.jpg')}}" alt="image"><span class="online"></span></div>
+                <div class="profile"><span class="online"></span></div>
                 <div class="info">
                   <p>Daniel Russell</p>
                   <p>Available</p>
                 </div> <small class="text-muted my-auto">14 min</small>
               </li>
               <li class="list">
-                <div class="profile"><img src="{{url_for('static',filename='images/faces/face4.jpg')}}" alt="image"><span class="offline"></span></div>
+                <div class="profile"><span class="offline"></span></div>
                 <div class="info">
                   <p>James Richardson</p>
                   <p>Away</p>
                 </div> <small class="text-muted my-auto">2 min</small>
               </li>
               <li class="list">
-                <div class="profile"><img src="{{url_for('static',filename='images/faces/face5.jpg')}}" alt="image"><span class="online"></span></div>
+                <div class="profile"><span class="online"></span></div>
                 <div class="info">
                   <p>Madeline Kennedy</p>
                   <p>Available</p>
                 </div> <small class="text-muted my-auto">5 min</small>
               </li>
               <li class="list">
-                <div class="profile"><img src="{{url_for('static',filename='images/faces/face6.jpg')}}" alt="image"><span class="online"></span></div>
+                <div class="profile"><span class="online"></span></div>
                 <div class="info">
                   <p>Sarah Graves</p>
                   <p>Available</p>
