--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -20,8 +20,8 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center"> <a class="navbar-brand brand-logo mr-5" href="{{url_for('static',filename='index.html')}}"><img
-            src="{{url_for('static',filename='img/logo/nexus-gradient.png')}}" class="mr-2" alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="{{url_for('static',filename='index.html')}}"><img
-            src="{{url_for('static',filename='img/logo/nexus-icon.png')}}" alt="logo" /></a> </div>
+            src="{{url_for('static',filename='img/logo/nexus-gradient.svg')}}" class="mr-2" alt="logo" /></a> <a class="navbar-brand brand-logo-mini" href="{{url_for('static',filename='index.html')}}"><img
+            src="{{url_for('static',filename='img/logo/nexus-icon.svg')}}" alt="logo" /></a> </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end"> <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize"> <span class="ti-layout-grid2"></span> </button>
         <ul class="navbar-nav mr-lg-2">
           <li class="nav-item nav-search d-none d-lg-block">
