--- a/templates/register.html
+++ b/templates/register.html
@@ -18,16 +18,13 @@
   <link rel="shortcut icon"/>
 </head>
 
-<body>
+<body style="background-image: url({{ url_for('static',filename='img/bg/bg.jpg') }});">
   <div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
       <div class="content-wrapper d-flex align-items-center auth px-0">
         <div class="row w-100 mx-0">
           <div class="col-lg-4 mx-auto">
             <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-              <div class="brand-logo">
-                <img src="{{url_for('static', filename='img/logo/nexus-gradient.png')}}" alt="logo">
-              </div>
               <h4>New here?</h4>
               <h6 class="font-weight-light">You haven't set your password yet. Create one now</h6>
               <form class="pt-3">
@@ -43,7 +40,7 @@
                   </div>
                 </div>
                 <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN UP</a>
+                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">FINISH REGISTRATION</a>
                 </div>
                 <div class="text-center mt-4 font-weight-light">
                   Already have an account? <a href="login.html" class="text-primary">Login</a>
@@ -59,16 +56,15 @@
   </div>
   <!-- container-scroller -->
   <!-- plugins:js -->
-  <script src="../../../../vendors/js/vendor.bundle.base.js"></script>
+  <script src="{{url_for('static',filename='vendors/js/vendor.bundle.base.js')}}"></script>
   <!-- endinject -->
   <!-- Plugin js for this page -->
   <!-- End plugin js for this page -->
-  <!-- inject:js -->
-  <script src="../../../../js/off-canvas.js"></script>
-  <script src="../../../../js/hoverable-collapse.js"></script>
-  <script src="../../../../js/template.js"></script>
-  <script src="../../../../js/settings.js"></script>
-  <script src="../../../../js/todolist.js"></script>
+  <script src="{{url_for('static',filename='js/off-canvas.js')}}"></script>
+  <script src="{{url_for('static',filename='js/hoverable-collapse.js')}}"></script>
+  <script src="{{url_for('static',filename='js/template.js')}}"></script>
+  <script src="{{url_for('static',filename='js/settings.js')}}"></script>
+  <script src="{{url_for('static',filename='js/todolist.js')}}"></script>
   <!-- endinject -->
 </body>
 
