--- a/templates/access-1.html
+++ b/templates/access-1.html
@@ -195,153 +195,6 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='index.html')}}"> <i class="ti-home menu-icon"></i> <span class="menu-title">Dashboard</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/widgets/widgets.html')}}"> <i class="ti-settings menu-icon"></i> <span class="menu-title">Widgets</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic"> <i class="ti-palette menu-icon"></i> <span class="menu-title">UI Elements</span> <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="ui-basic">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/accordions.html')}}">Accordions</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/buttons.html')}}">Buttons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/badges.html')}}">Badges</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/breadcrumbs.html')}}">Breadcrumbs</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/dropdowns.html')}}">Dropdowns</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/modals.html')}}">Modals</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/progress.html')}}">Progress bar</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/pagination.html')}}">Pagination</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/tabs.html')}}">Tabs</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/typography.html')}}">Typography</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/tooltips.html')}}">Tooltips</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#ui-advanced" aria-expanded="false" aria-controls="ui-advanced"> <i class="ti-view-list menu-icon"></i> <span class="menu-title">Advanced UI</span> <i
-                class="menu-arrow"></i> </a>
-            <div class="collapse" id="ui-advanced">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/dragula.html')}}">Dragula</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/clipboard.html')}}">Clipboard</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/context-menu.html')}}">Context menu</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/slider.html')}}">Sliders</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/carousel.html')}}">Carousel</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/colcade.html')}}">Colcade</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/loaders.html')}}">Loaders</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="form-elements"> <i class="ti-clipboard menu-icon"></i> <span class="menu-title">Form elements</span> <i
-                class="menu-arrow"></i> </a>
-            <div class="collapse" id="form-elements">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"><a class="nav-link" href="{{url_for('static',filename='pages/forms/basic_elements.html')}}">Basic Elements</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{url_for('static',filename='pages/forms/advanced_elements.html')}}">Advanced Elements</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{url_for('static',filename='pages/forms/validation.html')}}">Validation</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{url_for('static',filename='pages/forms/wizard.html')}}">Wizard</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#editors" aria-expanded="false" aria-controls="editors"> <i class="ti-eraser menu-icon"></i> <span class="menu-title">Editors</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="editors">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"><a class="nav-link" href="{{url_for('static',filename='pages/forms/text_editor.html')}}">Text editors</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{url_for('static',filename='pages/forms/code_editor.html')}}">Code editors</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#charts" aria-expanded="false" aria-controls="charts"> <i class="ti-bar-chart-alt menu-icon"></i> <span class="menu-title">Charts</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="charts">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/chartjs.html')}}">ChartJs</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/morris.html')}}">Morris</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/flot-chart.html')}}">Flot</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/google-charts.html')}}">Google charts</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/sparkline.html')}}">Sparkline js</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/c3.html')}}">C3 charts</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/chartist.html')}}">Chartists</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/charts/justGage.html')}}">JustGage</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#tables" aria-expanded="false" aria-controls="tables"> <i class="ti-layout menu-icon"></i> <span class="menu-title">Tables</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="tables">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/tables/basic-table.html')}}">Basic table</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/tables/data-table.html')}}">Data table</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/tables/js-grid.html')}}">Js-grid</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/tables/sortable-table.html')}}">Sortable table</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/popups.html')}}"> <i class="ti-export menu-icon"></i> <span class="menu-title">Popups</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/ui-features/notifications.html')}}"> <i class="ti-bell menu-icon"></i> <span class="menu-title">Notifications</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#icons" aria-expanded="false" aria-controls="icons"> <i class="ti-face-smile menu-icon"></i> <span class="menu-title">Icons</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="icons">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/icons/flag-icons.html')}}">Flag icons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/icons/mdi.html')}}">Mdi icons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/icons/font-awesome.html')}}">Font Awesome</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/icons/simple-line-icon.html')}}">Simple line icons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/icons/themify.html')}}">Themify icons</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#maps" aria-expanded="false" aria-controls="maps"> <i class="ti-map menu-icon"></i> <span class="menu-title">Maps</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="maps">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/maps/mapael.html')}}">Mapael</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/maps/vector-map.html')}}">Vector Map</a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/maps/google-maps.html')}}">Google Map</a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth"> <i class="ti-layers-alt menu-icon"></i> <span class="menu-title">User Pages</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="auth">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/login.html')}}"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/login-2.html')}}"> Login 2 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/register.html')}}"> Register </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/register-2.html')}}"> Register 2 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/lock-screen.html')}}"> Lockscreen </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error"> <i class="ti-help-alt menu-icon"></i> <span class="menu-title">Error pages</span> <i class="menu-arrow"></i> </a>
-            <div class="collapse" id="error">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/error-404.html')}}"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/error-500.html')}}"> 500 </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#general-pages" aria-expanded="false" aria-controls="general-pages"> <i class="ti-layers menu-icon"></i> <span class="menu-title">General Pages</span> <i
-                class="menu-arrow"></i> </a>
-            <div class="collapse" id="general-pages">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/blank-page.html')}}"> Blank Page </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/profile.html')}}"> Profile </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/faq.html')}}"> FAQ </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/faq-2.html')}}"> FAQ 2 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/news-grid.html')}}"> News grid </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/timeline.html')}}"> Timeline </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/search-results.html')}}"> Search Results </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/portfolio.html')}}"> Portfolio </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" data-toggle="collapse" href="#e-commerce" aria-expanded="false" aria-controls="e-commerce"> <i class="ti-shopping-cart menu-icon"></i> <span class="menu-title">E-commerce</span> <i
-                class="menu-arrow"></i> </a>
-            <div class="collapse" id="e-commerce">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/invoice.html')}}"> Invoice </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/pricing-table.html')}}"> Pricing Table </a></li>
-                <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/samples/orders.html')}}"> Orders </a></li>
-              </ul>
-            </div>
-          </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/apps/email.html')}}"> <i class="ti-email menu-icon"></i> <span class="menu-title">E-mail</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/apps/calendar.html')}}"> <i class="ti-calendar menu-icon"></i> <span class="menu-title">Calendar</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/apps/todo.html')}}"> <i class="ti-check-box menu-icon"></i> <span class="menu-title">Todo List</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/apps/gallery.html')}}"> <i class="ti-gallery menu-icon"></i> <span class="menu-title">Gallery</span> </a> </li>
-          <li class="nav-item"> <a class="nav-link" href="{{url_for('static',filename='pages/documentation/documentation.html')}}"> <i class="ti-write menu-icon"></i> <span class="menu-title">Documentation</span> </a> </li>
         </ul>
       </nav> <!-- partial -->
       <div class="main-panel">
@@ -350,18 +203,40 @@
             <div class="col-md-12 grid-margin">
               <div class="row">
                 <div class="col-12 col-xl-5 mb-4 mb-xl-0">
-                  <h4 class="font-weight-bold" >Welcome, {{ user_info["name"] }}!</h4>
-                </div>
-                <div class="col-12 col-xl-7">
-                  <div class="d-flex align-items-center justify-content-between flex-wrap">
-                    <div class="mb-3 mb-xl-0"> <button class="btn btn-warning rounded-0 text-white" style="background-image: linear-gradient(#FE5B34, #FE378C)">Download</button> </div>
-                  </div>
+                  <h4 class="font-weight-light mr-2 mb-1" >Welcome, {{ user_info["name"] }}!</h4>
                 </div>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3 grid-margin stretch-card">
+              <div class="card">
+                <div class="card-body">
+                  <h4 class="card-title">Inline forms</h4>
+                  <p class="card-description">
+                    Use the <code>.form-inline</code> class to display a series of labels, form controls, and buttons on a single horizontal row
+                  </p>
+                  <form class="form-inline">
+                    <label class="sr-only" for="inlineFormInputName2">Name</label>
+                    <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
+
+                    <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
+                    <div class="input-group mb-2 mr-sm-2">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">@</div>
+                      </div>
+                      <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Username">
+                    </div>
+                    <div class="form-check mx-sm-2">
+                      <label class="form-check-label">
+                        <input type="checkbox" class="form-check-input" checked="">
+                        Remember me
+                      <i class="input-helper"></i></label>
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2">Submit</button>
+                  </form>
+                </div>
+              </div>
               <div class="card">
                 <div class="card-body">
                   <p class="card-title text-md-center text-xl-left">Number of Meetings</p>
